# swaag

./: .gitignore  LICENSE  MANIFEST.in  README.md  build.sh  pyproject.toml  run_tests.py
config/: local.example.toml
doc/: architecture.md  context_budgeting.md  history_and_projections.md  installation.md  live_runtime_profiles.md  memory_and_editing.md  report.txt  runtime_loop.md  test_execution_report.md  testing.md
scripts/: archive_proof.py  benchmark_model_concurrency.py
src/swaag/: __init__.py  __main__.py  budgeting.py  cli.py  compression.py  config.py  context_builder.py  decision.py  devcheck.py  devcheck_profiles.py  editing.py  evaluator.py  events.py  expander.py  failure.py  finalproof.py  fsops.py  grammar.py  history.py  live_runtime_profiles.py  memory_semantic.py  model.py  notes.py  orchestrator.py  planner.py  project_state.py  prompt_analyzer.py  prompts.py  reader.py  roles.py  runtime.py  security.py  sessions.py  strategy.py  test_categories.py  testlane.py  testlanes.py  testprofile.py  tokens.py  types.py  (+4 more)
src/swaag/assets/: defaults.toml
src/swaag/assets/prompts/: active_session_control_user.txt  analysis_user.txt  answer_user.txt  decision_user.txt  expansion_user.txt  planning_user.txt  summary_system.txt  summary_user.txt  system_lean.txt  system_standard.txt  task_decision_user.txt  tool_input_user.txt  verification_user.txt
src/swaag/benchmark/: __init__.py  __main__.py  agent_regression.py  agent_support.py  benchmark_runner.py  errors.py  evaluation_runner.py  external.py  failure_analyzer.py  fixtures.py  local_agent_runner.py  metrics.py  report.py  result_collector.py  scaled_catalog.py  scoring.py  swebench_local.py  system_suite.py  task_definitions.py  terminal_bench_agent.py  terminal_bench_local.py
src/swaag/benchmark/fixtures/swebench/: swebench_full_pydata__xarray-4098.json  swebench_lite_sympy__sympy-15345.json  swebench_multilingual_astral-sh__ruff-15309.json  swebench_verified_pallets__flask-5014.json
src/swaag/benchmark/terminal_tasks/hello-swaag/: Dockerfile  app.py  docker-compose.yaml  run-tests.sh  solution.sh  task.yaml
src/swaag/benchmark/terminal_tasks/hello-swaag/tests/: test_outputs.py
src/swaag/environment/: browser.py  environment.py  filesystem.py  process.py  shell.py  state.py  workspace.py
src/swaag/guidance/: __init__.py  loader.py  resolver.py  trace.py  types.py
src/swaag/manual_validation/: __init__.py  __main__.py  clean_install_agent.py  live_tests.py  runner.py
src/swaag/retrieval/: __init__.py  embeddings.py  file_retriever.py  history_retriever.py  memory_retriever.py  query_builder.py  ranker.py  retriever.py  trace.py
src/swaag/skills/: __init__.py  catalog.py  loader.py  selector.py  trace.py
src/swaag/subagents/: __init__.py  manager.py  protocol.py  report.py  specs.py
src/swaag/subsystems/: __init__.py  base.py  files.py  planning.py  reasoning.py  tooling.py
src/swaag/testing/: llm_record_replay.py
src/swaag/tests/: __init__.py  __main__.py  test_installed_smoke.py
src/swaag/tools/: base.py  builtin.py  registry.py
tests/: __init__.py  conftest.py  helpers.py  test_agent_loop_replay.py  test_agent_regression_lane.py  test_agent_support.py  test_benchmark.py  test_benchmark_catalog.py  test_benchmark_import_hygiene.py  test_benchmark_metrics.py  test_benchmark_report.py  test_browser_integration.py  test_budgeting.py  test_clean_install.py  test_clean_install_agent.py  test_cli.py  test_config.py  test_context_builder.py  test_decision.py  test_devcheck.py  test_devcheck_routing.py  test_editing.py  test_end_to_end.py  test_environment.py  test_evaluation_runner.py  test_evaluator.py  test_expander.py  test_external_benchmarks.py  test_failure.py  test_false_positive_killers.py  test_grammar.py  test_guidance.py  test_history.py  test_imports.py  test_live_llamacpp.py  test_live_runtime_profiles.py  test_live_subset_selection.py  test_live_suite_structure.py  test_llm_record_replay.py  test_local_agent_runner.py  (+34 more)
