[project]
name = "swaag"
version = "0.1.0"
description = "SWAAG: a selfhosted working autonomous agent for a local llama.cpp server"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Hans-Peter Radtke" }]
license = {text = "MIT"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Environment :: Console",
  "Operating System :: OS Independent",
]
dependencies = [
  "requests>=2.31,<3"
]

[project.urls]
Homepage = "https://github.com/HansPeterRadtke/swaag"
Repository = "https://github.com/HansPeterRadtke/swaag"
Issues = "https://github.com/HansPeterRadtke/swaag/issues"

[project.optional-dependencies]
test = [
  "pytest>=8,<9",
  "pytest-testmon>=2.1,<3"
]
semantic-transformers = [
  "numpy>=1.26,<3",
  "torch>=2,<3",
  "transformers>=4.40,<5"
]
official-benchmarks = [
  "swebench>=4,<5",
  "terminal-bench>=0.2,<0.3"
]
publish = [
  "build>=1,<2",
  "twine>=5,<6"
]

[project.scripts]
swaag = "swaag.cli:main"
swaag-benchmark = "swaag.benchmark.benchmark_runner:main"
swaag-devcheck = "swaag.devcheck:main"
swaag-finalproof = "swaag.finalproof:main"
swaag-testprofile = "swaag.testprofile:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"swaag" = [
  "assets/*.toml",
  "assets/prompts/*.txt",
  "benchmark/fixtures/**/*.json",
  "benchmark/terminal_tasks/**/*"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "code_correctness: deterministic software-correctness tests with no model dependency",
  "agent_test: cached agent behavior tests",
  "fast: fast devcheck subset — cheap unit-level checks (internal routing only)",
  "system: system devcheck subset — runtime and orchestration checks (internal routing only)",
]
